# greenboost-windows

./: ..module-common.o.cmd  .Module.symvers.cmd  .gitignore  .greenboost.ko.cmd  .greenboost.mod.o.cmd  .greenboost.o.cmd  =2.6.0  =2.7.4.post1  LICENSE  Makefile  README.md  README_original_ferran.md  architecture.md  deploy_fix.sh  gb_pool_stress.py  greenboost.c  greenboost.ko  greenboost.mod.c  greenboost_cuda.map  greenboost_cuda_shim.c  greenboost_ioctl.h  greenboost_setup.sh
patches/: README.md
patches/exllamav3/exllamav3/cache/: __init__.py  greenboost.py
tools/: convert_to_exl3.sh  greenboost-exllama.sh  greenboost-kvpress.sh  greenboost-lora-train.py  greenboost-ptq.py
windows-port/: BUILDING.md  BUILD_INSTRUCTIONS.md  CC_INSTRUCTIONS.md  README.md  build.ps1  sign.ps1
windows-port/driver/: CMakeLists.txt  greenboost_win.c  greenboost_win.h
windows-port/shim/: CMakeLists.txt  greenboost_cuda_shim_win.h
windows-port/tools/: config.ps1  install.ps1
